--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </script>-->
 
 <head>
-<title>Script HTML</title>
+<title>Hope you Like it</title>
 <!-- 
   Made with love by Rayys!
   
@@ -58,7 +58,7 @@
        <!-- Answer Content -->
        <p id="kalimat2">Yeaayy! 😆</p>
        <p id="kalimatb2">Now, you are my girlfriend ❤️</p>
-       <p id="kalimatc2">Eitss.. But we will break up in time: <b id="ctimer" style="font-size:24px">7</b></p>
+       <p id="kalimatc2">Hey.. But we will break up in time: <b id="ctimer" style="font-size:24px">5</b></p>
 
        <!-- Answer Content 2 -->
        <p id="kalimat3">But Lies😜</p>
